# tiktok-platform

./: README.md
cloud-run/tiktok-scraper-api/: Dockerfile  README.md  app.py  requirements.txt
kubernetes/: README.md
kubernetes/resources/configmap/: users.json.sample
kubernetes/resources/cronjob/scraper/: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  app.2.py  app.3.py  app.py  cronjob.yaml  requirements.txt
kubernetes/resources/cronjob/storer/: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
kubernetes/resources/cronjob/storer/src/: gcp_transfer.rs  lib.rs  main.rs  parser.rs  storer.rs  transfer.rs
kubernetes/resources/cronjob/storer/src/lab/: tmp_transfer.rs
kubernetes/resources/cronjob/transfer/: .env.sample  .gitignore  Dockerfile  README.md  (+2 more)
kubernetes/resources/namespace/: argo.yaml
kubernetes/resources/secrets/: README.md
kubernetes/resources/workflow/: env.yaml.sample  loop_results.yaml  quick-start-postgres.gke-spot.yaml  tiktok-platform-workflow.gke-spot.yaml  tiktok-platform-workflow.yaml
script/: collect.js  follow_user.js
script/collect_follow_user/: .gitignore
terraform/: .gitignore  ENV_BUILD.md
terraform/dev/: dev.tfbackend.sample  shared-main.tf
terraform/modules/cloud-build/: module.tf
terraform/modules/cloud-run/: module.tf
terraform/modules/cloud-sql/: module.tf  variable.tf
terraform/modules/firestore/: module.tf
terraform/modules/kubernetes-engine/: module.tf
terraform/modules/service/: modules.tf
terraform/shared/: backend.tf  providers.tf  shared-main.tf  shared-variables.tf.sample
(+1 files in other folders)
